<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preference_view">

         <ListPreference
                android:key="mappreferences"
                android:title="@string/map"
                android:summary="@string/summary_map"
                android:entries="@array/entries_list_mappreferences"
                android:entryValues="@array/entryvalues_list_mappreferences"
                android:dialogTitle="@string/summary_map" />
        
        
         <PreferenceScreen
                android:key="option_preference"
                android:title="@string/title_option_preference"
                android:summary="@string/summary_option_preference">
            
            <!-- You can place more preferences here that will be shown on the next screen. --> 
                     
            <CheckBoxPreference
                	android:key="routepreference"
                	android:title="@string/title_route_preference"
                	android:summary="@string/summary_route_preference" />
            
            <CheckBoxPreference
                    android:key="zoompreference"
                    android:title="@string/title_zoom_preference"
                    android:summary="@string/summary_zoom_preference" />
            
            <CheckBoxPreference
                    android:key="scalepreference"
                    android:title="@string/title_scale_preference"
                    android:summary="@string/summary_scale_preference" />
            
                
         </PreferenceScreen>
  
         
         <ListPreference
                android:key="focuspreferences"
                android:title="@string/focus"
                android:summary="@string/summary_focus"
                android:entries="@array/entries_list_focuspreferences"
                android:entryValues="@array/entryvalues_list_focuspreferences"
                android:dialogTitle="@string/summary_focus" />
            
            
    </PreferenceCategory>
                
    <PreferenceCategory
            android:title="@string/preference_favorites">

        <!--  <EditTextPreference
                android:key="edittext_preference"
                android:title="string/title_edittext_preference"
                android:summary="string/summary_edittext_preference"
                android:dialogTitle="string/dialog_title_edittext_preference" />-->
                
        <ListPreference
                android:key="linepreferences"
                android:title="@string/line"
                android:summary="@string/summary_line"
                android:entries="@array/entries_list_linepreferences"
                android:entryValues="@array/entryvalues_list_linepreferences"
                android:dialogTitle="@string/summary_line" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_layout">

         <ListPreference
                android:key="themepreferences"
                android:title="@string/theme"
                android:summary="@string/summary_theme"
                android:entries="@array/entries_list_themepreferences"
                android:entryValues="@array/entryvalues_list_themepreferences"
                android:dialogTitle="@string/summary_theme" />
        

        <!--   <PreferenceScreen
                android:title="string/title_intent_preference"
                android:summary="string/summary_intent_preference">

             <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" /> 
        </PreferenceScreen>-->
        

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/preference_ref">
    
        <PreferenceScreen
                android:title="@string/title_circular_preference"
                android:summary="@string/summary_circular_preference">

             <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.prefeitura.unicamp.br/servicos.php?servID=69" /> 
        
        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="Sobre"
                android:summary="Informacoes a respeito do projeto">
            
            	<PreferenceScreen
                android:title="BusFinderUnicamp"
                android:summary="©2012 Trazi Inc."/>
            	
            	<PreferenceScreen
                android:title="Versão"
                android:summary="1.0"/>
            	
            	<PreferenceScreen
                android:title="EA998/MC933"
                android:summary="Projeto da Disciplina Tópicos Especiais em Engenharia de Computacão"/>
            	
            	<PreferenceScreen
                android:title="Desenvolvedores"
                android:summary="Diego Zilioti, Murilo Travareli"/>
            	
            	<PreferenceScreen
                android:title="Colaboradores"
                android:summary="Eleri, José Mário, Rodolfo e Sandro Rigo"/>            	
                
         </PreferenceScreen>
        
        
       <!--   <CheckBoxPreference
                android:key="parent_checkbox_preference"
                android:title="string/title_parent_preference"
                android:summary="string/summary_parent_preference" />-->

        <!-- The visual style of a child is defined by this styled theme attribute. 
        <CheckBoxPreference
                android:key="child_checkbox_preference"
                android:dependency="parent_checkbox_preference"
                android:title="string/title_child_preference"
                android:summary="string/summary_child_preference" />
            -->
    </PreferenceCategory>
    
</PreferenceScreen>